[package]
name = "esp_buddy_rs"
version = "0.2.0"
authors = ["Juraj Michálek <juraj.michalek@espressif.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-graphics = "0.8.0"
embedded-hal = "0.2"
esp-hal-common = { version = "0.13.0" }
esp-alloc = { version = "0.3.0" }
hal = { package = "esp32-hal", version = "0.16.0" }
esp-backtrace = { version = "0.9.0", features = ["esp32", "panic-handler", "print-uart"] }
# ssd1306 was not released yet, so we use git version
ssd1306 = { git = "https://github.com/jamwaffles/ssd1306.git", rev = "7271f39" }
#ssd1306 = "0.8"

# Blinky dependency
# ws2812-esp32-rmt-driver = "0.4.0"
smart-leds        = "0.3.0"
esp-hal-smartled = { version = "0.6.0", features = ["esp32"] }
hts221 = "0.3.0"
esp-println = { version = "0.7.0", features = [ "esp32", "log" ] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", features = [ "esp32", "wifi", "embedded-svc" ]}
embedded-svc = { version = "0.26.1", default-features = false, features = []}
shared-bus = "0.3.1"
heapless = { version = "0.7.14", default-features = false }

# Wifi dependency
embedded-io = "0.6.1"
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }

critical-section = "1.1.1"
atomic-polyfill = "1.0.1"
log = "0.4.17"
enumset = { version = "1", default-features = false }
linked_list_allocator = { version = "0.10.3", default-features = false, features = ["const_mut_refs"] }
fugit = "0.3.6"
#num-derive = { version = "0.4.1", features = ["full-syntax"] }
#num-traits = { version = "0.2", default-features = false }
esp-wifi-sys = { git="https://github.com/esp-rs/esp-wifi.git" }
# embassy-sync = { version = "0.2.0" }
# embassy-futures = { version = "0.1.0" }
# embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
# embassy-net-driver = { git = "https://github.com/embassy-rs/embassy", rev = "fb27594" }

bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "48eba32e0a0b258ea8945d67077eb38eaa648101", features = ["macros"] }
# embassy-executor = { version = "0.2.0", package = "embassy-executor", features = ["nightly", "executor-thread", "integrated-timers"] }
# embassy-time = { version = "0.1.1", features = ["nightly"] }
futures-util = { version = "0.3.17", default-features = false }
# esp-backtrace = { version = "0.7.0", features = ["panic-handler", "exception-handler", "print-uart"] }
# embedded-hal-async = { version = "0.2.0-alpha.0" }
