[package]
name = "esp-clock-nostd"
version = "0.1.0"
authors = ["Juraj Michalek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32-hal = "0.17.0"
esp-backtrace = { version = "0.10.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.8.0", features = ["esp32", "log"] }
log = { version = "0.4.20" }
esp-alloc = { version = "0.3.0" }
esp-wifi  = { version = "0.2.0", features = ["esp32", "wifi"] }
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
heapless = { version = "0.7.17", default-features = false }
embedded-graphics = "0.8.0"
ssd1306 = { git = "https://github.com/jamwaffles/ssd1306.git", rev = "7271f39" }
lexical-core = {version = "0.8.5", default-features = false, features = ["write-integers", "write-floats", "parse-integers", "parse-floats"]}

[features]
default = ["esp32-hal/xtal-40mhz"]

